--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <body
         id="app"
-        class="flex flex-col w-screen md:h-screen pb-6 pt-4 px-4 sm:pb-8 sm:pt-6 sm:px-8 md:pb-12 md:pt-8 md:px-16 lg:pb-24 lg:pt-16 lg:px-32 h-fit overflow-y-scroll overflow-x-hidden lg:overflow-hidden text-base text-eerieBlack font-body scrollbar-track-white scrollbar-thumb-utOrange scrollbar-thin">
+        class="flex flex-col w-screen lg:h-screen pb-6 pt-4 px-4 sm:pb-8 sm:pt-6 sm:px-8 md:pb-12 md:pt-8 md:px-16 lg:pb-16 lg:pt-10 lg:px-20 xl:pb-18 xl:pt-12 xl:px-24 h-fit overflow-y-scroll overflow-x-hidden lg:overflow-y-hidden text-base text-eerieBlack font-body scrollbar-track-white scrollbar-thumb-utOrange scrollbar-thin">
         <script type="module" src="/src/main.js"></script>
     </body>
 </html>
