feat: add filtering component

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
     <title>Odace</title>
   </head>
-  <body class="">
+  <body class="w-screen h-screen bg-offblack">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
